New screen elements and functionalities. Code still needs to be double checked, though.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css"/>
         <script type="text/javascript" src="minesweeper.js"></script>
         <script type="text/javascript">
-		<!--//--><![CDATA[//><!--
+		<!--//--><![CDATA[//><!--//--><!]]>
 			var images = new Array();
 			function preload(){
 				for (i = 0; i < preload.arguments.length; i++) {
@@ -18,29 +18,21 @@
 				"square.png",
                 "empty.png"
 			)
-		//--><!]]>
+		
         
         </script>
     </head>
     <body>
-            <!--<div>
-                <h2>
-                    <span>Your time:</span>
-                    <span class="timer">0</span>
-                </h2>
-            </div>
-            <div id="controls">
-                <span>Level:</span>
-                <select class="level">
-                    <option value="easy">Easy</option>
-                    <option value="beginner">Beginner</option>
-                    <option value="intermediate">Intermediate</option>
-                    <option value="advanced">Advanced</option>
-                </select>
-                <button class="newGame" type="button">New game</button>
-            </div>-->
-        <div id="gameCanvas" class="minesweeper">
+        <div id="gameCanvas">
             <canvas id="gCanvas" width="800" height="800"></canvas>
+        </div>
+        <div id="controls">
+            <div id="timer">
+                0s
+            </div>
+            <div id="new">
+                
+            </div>
         </div>
     </body>
 
